--- a/src/assets/scss/_housesForRent.scss
+++ b/src/assets/scss/_housesForRent.scss
@@ -343,7 +343,6 @@
 }
 
 .MuiTypography-root {
-
 }
 
 .house-card-footer {
@@ -500,6 +499,135 @@
   }
 }
 
+.cluster-marker {
+  @extend %smallest-font-style;
+  border-radius: 50%;
+  text-align: center;
+  color: white;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  background-color: #7b53c1;
+  cursor: pointer;
+  font-weight: 700;
+  border: 1px solid #4e2f83;
+  height: 40px;
+  width: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: $bold-font-family;
+
+  &:hover {
+    transition: all 0.3s ease-out;
+    background-color: $light-yellow;
+    border: none;
+  }
+}
+
+.marker {
+  @extend %smallest-font-style;
+  height: 30px;
+  min-width: 70px;
+  transform: translate(-50%, -37px);
+  display: inline-block;
+  padding: 0 10px;
+  border-radius: 4px;
+  max-width: 130px;
+  background-color: #7b53c1;
+  cursor: pointer;
+  font-weight: 700;
+  text-align: center;
+  border: 1px solid #4e2f83;
+  transition: all 0.3s ease-out;
+
+  span {
+    line-height: 30px;
+    white-space: nowrap;
+    color: white;
+    text-align: center;
+    font-size: 14px;
+    font-family: $bold-font-family;
+  }
+
+  &:after {
+    content: "";
+    display: block;
+    width: 22px;
+    height: 12px;
+    background: url("../../assets/img/marker-bottom.png") no-repeat;
+    background-position: 0 -24px;
+    background-size: 22px;
+    margin: -2px auto 0;
+  }
+
+  &:hover {
+    background-color: $light-yellow;
+    border: none;
+
+    &:after {
+      background-position: 0 -36px;
+    }
+  }
+}
+
+.marker.marker-clicked {
+  background-color: $light-text-colour;
+  border-color: #8682a5;
+
+  &:after {
+    background-position: 0 0;
+  }
+}
+
+.marker-wrapper {
+  position: relative;
+
+  .map-house-cards {
+    position: absolute;
+    width: 300px;
+    z-index: 1;
+    bottom: 90px;
+    right: -150px;
+    border-radius: 6px;
+    box-shadow: 0 0 28px rgba(50, 48, 58, 0.25);
+    //box-shadow: 0 14px 24px 0 rgba(50, 48, 58, 0.25);
+    .price-text {
+      @extend %small-font-style;
+    }
+  }
+}
+
+.map-card-wrapper {
+  position: relative;
+
+  .pointer-bg-top {
+    position: absolute;
+    top: -90px;
+    right: -25px;
+    z-index: 1;
+    border: none;
+    height: 20px;
+    width: 50px;
+    background-position: 50%;
+    background-repeat: no-repeat;
+  }
+}
+
+.map-card-image-wrapper {
+  position: relative;
+
+  .map-house-card-amenities {
+    position: absolute;
+    display: flex;
+    bottom: 15px;
+    left: 15px;
+
+    .house-icon-wrapper {
+      color: white;
+    }
+  }
+}
+
 @media (max-width: 1080px) {
   .houses-for-rent-container {
     padding-top: 50px;
@@ -535,7 +663,6 @@
   .house-card-footer {
     margin-right: 0;
     .house-icon-wrapper {
-
       .svg-icon {
         padding-right: 1px;
         padding-bottom: 1px;
