--- a/src/assets/scss/style.css
+++ b/src/assets/scss/style.css
@@ -9991,9 +9991,9 @@ h3 {
   line-height: 20px;
 }
 
-.pricing-header .pricing-text, .plan-price .price, .plan-type .type, .sidebar-option-wrapper li .text, .landlord-card .name, .chat-info .name, .marker-wrapper .map-house-cards .price-text {
-  font-size: 16px;
-  line-height: 22px;
+.location-dropdown li, .pricing-header .pricing-text, .plan-price .price, .plan-type .type, .sidebar-option-wrapper li .text, .landlord-card .name, .chat-info .name, .marker-wrapper .map-house-cards .price-text {
+    font-size: 16px;
+    line-height: 22px;
 }
 
 .perfect-place-section .perfect-place-content button, .rental-instruction .learn-more-btn button, .header-btn-container button, .rent-list-btn button, .renting-search .renting-search-content button, .go-to-inbox {
@@ -10172,9 +10172,9 @@ h1 {
   line-height: 20px;
 }
 
-.pricing-header .pricing-text, .plan-price .price, .plan-type .type, .sidebar-option-wrapper li .text, .landlord-card .name, .chat-info .name, .marker-wrapper .map-house-cards .price-text {
-  font-size: 16px;
-  line-height: 22px;
+.location-dropdown li, .pricing-header .pricing-text, .plan-price .price, .plan-type .type, .sidebar-option-wrapper li .text, .landlord-card .name, .chat-info .name, .marker-wrapper .map-house-cards .price-text {
+    font-size: 16px;
+    line-height: 22px;
 }
 
 .perfect-place-section .perfect-place-content button, .rental-instruction .learn-more-btn button, .header-btn-container button, .rent-list-btn button, .renting-search .renting-search-content button, .go-to-inbox {
@@ -10300,9 +10300,9 @@ h1 {
   line-height: 20px;
 }
 
-.pricing-header .pricing-text, .plan-price .price, .plan-type .type, .sidebar-option-wrapper li .text, .landlord-card .name, .chat-info .name, .marker-wrapper .map-house-cards .price-text {
-  font-size: 16px;
-  line-height: 22px;
+.location-dropdown li, .pricing-header .pricing-text, .plan-price .price, .plan-type .type, .sidebar-option-wrapper li .text, .landlord-card .name, .chat-info .name, .marker-wrapper .map-house-cards .price-text {
+    font-size: 16px;
+    line-height: 22px;
 }
 
 .perfect-place-section .perfect-place-content button, .rental-instruction .learn-more-btn button, .header-btn-container button, .rent-list-btn button, .renting-search .renting-search-content button, .go-to-inbox {
@@ -10839,9 +10839,9 @@ html {
   line-height: 20px;
 }
 
-.pricing-header .pricing-text, .plan-price .price, .plan-type .type, .sidebar-option-wrapper li .text, .landlord-card .name, .chat-info .name, .marker-wrapper .map-house-cards .price-text {
-  font-size: 16px;
-  line-height: 22px;
+.location-dropdown li, .pricing-header .pricing-text, .plan-price .price, .plan-type .type, .sidebar-option-wrapper li .text, .landlord-card .name, .chat-info .name, .marker-wrapper .map-house-cards .price-text {
+    font-size: 16px;
+    line-height: 22px;
 }
 
 .perfect-place-section .perfect-place-content button, .rental-instruction .learn-more-btn button, .header-btn-container button, .rent-list-btn button, .renting-search .renting-search-content button, .go-to-inbox {
@@ -11022,9 +11022,9 @@ html {
   line-height: 20px;
 }
 
-.pricing-header .pricing-text, .plan-price .price, .plan-type .type, .sidebar-option-wrapper li .text, .landlord-card .name, .chat-info .name, .marker-wrapper .map-house-cards .price-text {
-  font-size: 16px;
-  line-height: 22px;
+.location-dropdown li, .pricing-header .pricing-text, .plan-price .price, .plan-type .type, .sidebar-option-wrapper li .text, .landlord-card .name, .chat-info .name, .marker-wrapper .map-house-cards .price-text {
+    font-size: 16px;
+    line-height: 22px;
 }
 
 .perfect-place-section .perfect-place-content button, .rental-instruction .learn-more-btn button, .header-btn-container button, .rent-list-btn button, .renting-search .renting-search-content button, .go-to-inbox {
@@ -11150,9 +11150,9 @@ html {
   line-height: 20px;
 }
 
-.pricing-header .pricing-text, .plan-price .price, .plan-type .type, .sidebar-option-wrapper li .text, .landlord-card .name, .chat-info .name, .marker-wrapper .map-house-cards .price-text {
-  font-size: 16px;
-  line-height: 22px;
+.location-dropdown li, .pricing-header .pricing-text, .plan-price .price, .plan-type .type, .sidebar-option-wrapper li .text, .landlord-card .name, .chat-info .name, .marker-wrapper .map-house-cards .price-text {
+    font-size: 16px;
+    line-height: 22px;
 }
 
 .perfect-place-section .perfect-place-content button, .rental-instruction .learn-more-btn button, .header-btn-container button, .rent-list-btn button, .renting-search .renting-search-content button, .go-to-inbox {
@@ -11595,9 +11595,9 @@ html {
   line-height: 20px;
 }
 
-.pricing-header .pricing-text, .plan-price .price, .plan-type .type, .sidebar-option-wrapper li .text, .landlord-card .name, .chat-info .name, .marker-wrapper .map-house-cards .price-text {
-  font-size: 16px;
-  line-height: 22px;
+.location-dropdown li, .pricing-header .pricing-text, .plan-price .price, .plan-type .type, .sidebar-option-wrapper li .text, .landlord-card .name, .chat-info .name, .marker-wrapper .map-house-cards .price-text {
+    font-size: 16px;
+    line-height: 22px;
 }
 
 .perfect-place-section .perfect-place-content button, .rental-instruction .learn-more-btn button, .header-btn-container button, .rent-list-btn button, .go-to-inbox, .renting-search .renting-search-content button {
@@ -12022,9 +12022,9 @@ html {
   line-height: 20px;
 }
 
-.pricing-header .pricing-text, .plan-price .price, .plan-type .type, .sidebar-option-wrapper li .text, .landlord-card .name, .chat-info .name, .marker-wrapper .map-house-cards .price-text {
-  font-size: 16px;
-  line-height: 22px;
+.location-dropdown li, .pricing-header .pricing-text, .plan-price .price, .plan-type .type, .sidebar-option-wrapper li .text, .landlord-card .name, .chat-info .name, .marker-wrapper .map-house-cards .price-text {
+    font-size: 16px;
+    line-height: 22px;
 }
 
 .perfect-place-section .perfect-place-content button, .rental-instruction .learn-more-btn button, .header-btn-container button, .rent-list-btn button, .go-to-inbox, .renting-search .renting-search-content button {
@@ -12786,9 +12786,9 @@ html {
   line-height: 20px;
 }
 
-.pricing-header .pricing-text, .plan-price .price, .plan-type .type, .sidebar-option-wrapper li .text, .landlord-card .name, .chat-info .name, .marker-wrapper .map-house-cards .price-text {
-  font-size: 16px;
-  line-height: 22px;
+.location-dropdown li, .pricing-header .pricing-text, .plan-price .price, .plan-type .type, .sidebar-option-wrapper li .text, .landlord-card .name, .chat-info .name, .marker-wrapper .map-house-cards .price-text {
+    font-size: 16px;
+    line-height: 22px;
 }
 
 .perfect-place-section .perfect-place-content button, .rental-instruction .learn-more-btn button, .header-btn-container button, .rent-list-btn button, .go-to-inbox, .renting-search .renting-search-content button {
@@ -13697,9 +13697,9 @@ html {
   line-height: 20px;
 }
 
-.pricing-header .pricing-text, .plan-price .price, .plan-type .type, .sidebar-option-wrapper li .text, .landlord-card .name, .chat-info .name, .marker-wrapper .map-house-cards .price-text {
-  font-size: 16px;
-  line-height: 22px;
+.location-dropdown li, .pricing-header .pricing-text, .plan-price .price, .plan-type .type, .sidebar-option-wrapper li .text, .landlord-card .name, .chat-info .name, .marker-wrapper .map-house-cards .price-text {
+    font-size: 16px;
+    line-height: 22px;
 }
 
 .perfect-place-section .perfect-place-content button, .rental-instruction .learn-more-btn button, .header-btn-container button, .rent-list-btn button, .go-to-inbox, .renting-search .renting-search-content button {
@@ -14026,9 +14026,9 @@ html {
   line-height: 20px;
 }
 
-.pricing-header .pricing-text, .plan-price .price, .plan-type .type, .sidebar-option-wrapper li .text, .landlord-card .name, .chat-info .name, .marker-wrapper .map-house-cards .price-text {
-  font-size: 16px;
-  line-height: 22px;
+.location-dropdown li, .pricing-header .pricing-text, .plan-price .price, .plan-type .type, .sidebar-option-wrapper li .text, .landlord-card .name, .chat-info .name, .marker-wrapper .map-house-cards .price-text {
+    font-size: 16px;
+    line-height: 22px;
 }
 
 .perfect-place-section .perfect-place-content button, .rental-instruction .learn-more-btn button, .header-btn-container button, .rent-list-btn button, .go-to-inbox, .renting-search .renting-search-content button {
@@ -14349,9 +14349,9 @@ html {
   line-height: 20px;
 }
 
-.pricing-header .pricing-text, .plan-price .price, .plan-type .type, .sidebar-option-wrapper li .text, .landlord-card .name, .chat-info .name, .marker-wrapper .map-house-cards .price-text {
-  font-size: 16px;
-  line-height: 22px;
+.location-dropdown li, .pricing-header .pricing-text, .plan-price .price, .plan-type .type, .sidebar-option-wrapper li .text, .landlord-card .name, .chat-info .name, .marker-wrapper .map-house-cards .price-text {
+    font-size: 16px;
+    line-height: 22px;
 }
 
 .perfect-place-section .perfect-place-content button, .rental-instruction .learn-more-btn button, .header-btn-container button, .rent-list-btn button, .go-to-inbox, .renting-search .renting-search-content button {
@@ -14551,9 +14551,9 @@ html {
   line-height: 20px;
 }
 
-.pricing-header .pricing-text, .plan-price .price, .plan-type .type, .sidebar-option-wrapper li .text, .landlord-card .name, .chat-info .name, .marker-wrapper .map-house-cards .price-text {
-  font-size: 16px;
-  line-height: 22px;
+.location-dropdown li, .pricing-header .pricing-text, .plan-price .price, .plan-type .type, .sidebar-option-wrapper li .text, .landlord-card .name, .chat-info .name, .marker-wrapper .map-house-cards .price-text {
+    font-size: 16px;
+    line-height: 22px;
 }
 
 .perfect-place-section .perfect-place-content button, .rental-instruction .learn-more-btn button, .header-btn-container button, .rent-list-btn button, .go-to-inbox, .renting-search .renting-search-content button {
@@ -14749,9 +14749,9 @@ html {
   line-height: 20px;
 }
 
-.pricing-header .pricing-text, .plan-price .price, .plan-type .type, .sidebar-option-wrapper li .text, .landlord-card .name, .chat-info .name, .marker-wrapper .map-house-cards .price-text {
-  font-size: 16px;
-  line-height: 22px;
+.location-dropdown li, .pricing-header .pricing-text, .plan-price .price, .plan-type .type, .sidebar-option-wrapper li .text, .landlord-card .name, .chat-info .name, .marker-wrapper .map-house-cards .price-text {
+    font-size: 16px;
+    line-height: 22px;
 }
 
 .perfect-place-section .perfect-place-content button, .rental-instruction .learn-more-btn button, .header-btn-container button, .rent-list-btn button, .go-to-inbox, .renting-search .renting-search-content button {
@@ -15082,9 +15082,9 @@ html {
   line-height: 20px;
 }
 
-.pricing-header .pricing-text, .plan-price .price, .plan-type .type, .sidebar-option-wrapper li .text, .marker-wrapper .map-house-cards .price-text, .chat-info .name, .landlord-card .name {
-  font-size: 16px;
-  line-height: 22px;
+.location-dropdown li, .pricing-header .pricing-text, .plan-price .price, .plan-type .type, .sidebar-option-wrapper li .text, .marker-wrapper .map-house-cards .price-text, .chat-info .name, .landlord-card .name {
+    font-size: 16px;
+    line-height: 22px;
 }
 
 .perfect-place-section .perfect-place-content button, .rental-instruction .learn-more-btn button, .header-btn-container button, .rent-list-btn button, .go-to-inbox, .renting-search .renting-search-content button {
@@ -15248,9 +15248,9 @@ html {
   line-height: 20px;
 }
 
-.pricing-header .pricing-text, .plan-price .price, .plan-type .type, .sidebar-option-wrapper li .text, .marker-wrapper .map-house-cards .price-text, .chat-info .name, .landlord-card .name {
-  font-size: 16px;
-  line-height: 22px;
+.location-dropdown li, .pricing-header .pricing-text, .plan-price .price, .plan-type .type, .sidebar-option-wrapper li .text, .marker-wrapper .map-house-cards .price-text, .chat-info .name, .landlord-card .name {
+    font-size: 16px;
+    line-height: 22px;
 }
 
 .perfect-place-section .perfect-place-content button, .rental-instruction .learn-more-btn button, .header-btn-container button, .rent-list-btn button, .go-to-inbox, .renting-search .renting-search-content button {
@@ -15690,9 +15690,9 @@ html {
   line-height: 20px;
 }
 
-.marker-wrapper .map-house-cards .price-text, .chat-info .name, .landlord-card .name, .sidebar-option-wrapper li .text, .plan-type .type, .plan-price .price, .pricing-header .pricing-text {
-  font-size: 16px;
-  line-height: 22px;
+.location-dropdown li, .marker-wrapper .map-house-cards .price-text, .chat-info .name, .landlord-card .name, .sidebar-option-wrapper li .text, .plan-type .type, .plan-price .price, .pricing-header .pricing-text {
+    font-size: 16px;
+    line-height: 22px;
 }
 
 .perfect-place-section .perfect-place-content button, .rental-instruction .learn-more-btn button, .header-btn-container button, .rent-list-btn button, .go-to-inbox, .renting-search .renting-search-content button {
@@ -15853,9 +15853,9 @@ html {
   line-height: 20px;
 }
 
-.marker-wrapper .map-house-cards .price-text, .chat-info .name, .landlord-card .name, .sidebar-option-wrapper li .text, .plan-type .type, .plan-price .price, .pricing-header .pricing-text {
-  font-size: 16px;
-  line-height: 22px;
+.location-dropdown li, .marker-wrapper .map-house-cards .price-text, .chat-info .name, .landlord-card .name, .sidebar-option-wrapper li .text, .plan-type .type, .plan-price .price, .pricing-header .pricing-text {
+    font-size: 16px;
+    line-height: 22px;
 }
 
 .perfect-place-section .perfect-place-content button, .rental-instruction .learn-more-btn button, .header-btn-container button, .rent-list-btn button, .go-to-inbox, .renting-search .renting-search-content button {
@@ -15981,9 +15981,9 @@ html {
   line-height: 20px;
 }
 
-.marker-wrapper .map-house-cards .price-text, .chat-info .name, .landlord-card .name, .sidebar-option-wrapper li .text, .plan-type .type, .plan-price .price, .pricing-header .pricing-text {
-  font-size: 16px;
-  line-height: 22px;
+.location-dropdown li, .marker-wrapper .map-house-cards .price-text, .chat-info .name, .landlord-card .name, .sidebar-option-wrapper li .text, .plan-type .type, .plan-price .price, .pricing-header .pricing-text {
+    font-size: 16px;
+    line-height: 22px;
 }
 
 .perfect-place-section .perfect-place-content button, .rental-instruction .learn-more-btn button, .header-btn-container button, .rent-list-btn button, .go-to-inbox, .renting-search .renting-search-content button {
@@ -16090,17 +16090,19 @@ html {
 }
 
 .input-container {
-  position: relative;
+    cursor: pointer;
+    position: relative;
 }
 .input-container input {
-  padding: 21px 30px;
-  width: 100%;
-  border: none;
-  border-radius: 6px;
-  font-size: 20px;
-  line-height: 28px;
-  box-shadow: 0 14px 24px rgba(46, 45, 54, 0.25);
-  color: #2e2d36;
+    padding: 21px 30px;
+    width: 100%;
+    border: none;
+    border-radius: 6px;
+    font-size: 20px;
+    line-height: 28px;
+    box-shadow: 0 14px 24px rgba(46, 45, 54, 0.25);
+    color: #2e2d36;
+    outline: none;
 }
 .input-container ::placeholder {
   /* Chrome, Firefox, Opera, Safari 10.1+ */
@@ -16123,25 +16125,38 @@ html {
   position: absolute;
   border-radius: 3px;
   background: #fff;
-  overflow: hidden;
-  z-index: 1;
-  display: none;
+    overflow: hidden;
+    z-index: 1;
+    display: none;
 }
+
 .location-dropdown-enter {
-  display: block;
+    display: block;
 }
+
 .location-dropdown li {
-  padding: 0 30px;
-  line-height: 70px;
+    padding: 0 30px;
+    line-height: 70px;
+    color: #2e2d36;
+}
+
+.location-dropdown li:hover {
+    background-color: #f2f3f5;
+    transition: all 0.3s ease-in;
+}
+
+.location-dropdown li:first-child {
+    background-color: #f2f3f5;
 }
 
 .rent-list-btn button {
-  padding: 11px 40px;
-  font-size: 20px;
-  line-height: 28px;
-  border-top-left-radius: 6px;
-  border-top-right-radius: 6px;
+    padding: 11px 40px;
+    font-size: 20px;
+    line-height: 28px;
+    border-top-left-radius: 6px;
+    border-top-right-radius: 6px;
 }
+
 .rent-list-btn .rent-btn {
   font-family: proxima-nova-bold, sans-serif;
   background-color: rgba(46, 45, 54, 0.3);
