feat: Add suggestion to homepage

--- a/src/assets/scss/_home.scss
+++ b/src/assets/scss/_home.scss
@@ -49,6 +49,10 @@
   cursor: pointer;
   position: relative;
 
+  .suggestions-dropdown {
+    margin-top: 10px;
+  }
+
   input {
     padding: 21px 30px;
     width: 100%;
